@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use Check::Fork qw(check_fork $ERROR_MESSAGE);
-use Test::More 'tests' => 7;
+use Test::More 'tests' => 9;
 use Test::NoWarnings;
 
 # Test.
@@ -25,6 +25,17 @@ $ret = check_fork($test_config, $test_os);
 is($ret, 0, 'Test not forking on Windows without itrhreads.');
 is($ERROR_MESSAGE, 'MSWin32: No interpreter-based threading implementation.',
 	'Test error message on Window');
+
+# Test.
+$test_config = {
+	'ccflags' => '-DPERL_IMPLICIT_SYS',
+	'useithreads' => undef,
+};
+$test_os = 'NetWare';
+$ret = check_fork($test_config, $test_os);
+is($ret, 0, 'Test not forking on NetWare without itrhreads.');
+is($ERROR_MESSAGE, 'NetWare: No interpreter-based threading implementation.',
+	'Test error message on NetWare');
 
 # Test.
 $test_config = {
