@@ -1,4 +1,5 @@
 0.02
+ - Add test for failing NetWare in fake test.
  - Improve doc for testing variables.
  - Fix test requires.
  - Fix typo in test message.
